--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,17 @@
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
+if(WIN32)
+    set(USERHOME $ENV{USERPROFILE})
+else()
+    set(USERHOME $ENV{HOME})
+endif()
+set(sdkVersion 2.1.0)
+set(toolchainVersion 13_3_Rel1)
+set(picotoolVersion 2.1.0)
+set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+if (EXISTS ${picoVscode})
+    include(${picoVscode})
+endif()
+# ====================================================================================
 # ====================================================================================
 if(WIN32)
     set(USERHOME $ENV{USERPROFILE})
@@ -48,7 +62,7 @@ pico_enable_stdio_usb(ProjetoControleSerial 1)
 target_link_libraries(ProjetoControleSerial
         pico_stdlib
         hardware_pwm
-        bootrom)
+)
 
 # Add the standard include files to the build
 target_include_directories(ProjetoControleSerial PRIVATE
